Added name checker

--- a/Web/express/public/index.html
+++ b/Web/express/public/index.html
@@ -1,15 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Html test</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+        <nav class="nav" aria-label="Main Navigation">
+            <ul class="nav__list">
+                <li class="nav__item nav_item--active" aria-current="page"><a href="./">Home</a></li>
+                <li class="nav__item"><a href="./about">About</a></li>
+                <li class="nav__item"><a href="./contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Welcome to Dessert Shop</h1>
-    <div><img src="./images/mushabak.jpg" alt="">
-            <img src="./images/banana.jpg" alt="">   
-            <img src="./images/icecream.jpg" alt=""> 
+    <div>
+      <img src="./images/mushabak.jpg" alt="" />
+      <img src="./images/banana.jpg" alt="" />
+      <img src="./images/icecream.jpg" alt="" />
     </div>
-</body>
+  </body>
 </html>
